force-app/main/default/objects/GridWiz_Unlimit__GridDefinition__c/GridWiz_Unlimit__GridDefinition__c.object-meta.xml
<CustomObject>
    <label>GridDefinition</label>
    <nameField>
        <displayFormat>GD-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GridDefinitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>