force-app/main/default/objects/GridWiz_Unlimit__GridDefinition__c/fields/GridWiz_Unlimit__Description__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>