force-app/main/default/objects/GridWiz_Unlimit__GridDefinition__c/fields/GridWiz_Unlimit__FooterMessage__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__FooterMessage__c</fullName>
    <label>FooterMessage</label>
    <type>TextArea</type>
</CustomField>