force-app/main/default/objects/GridWiz_Unlimit__GridDefinition__c/fields/GridWiz_Unlimit__Grid_Name__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__Grid_Name__c</fullName>
    <label>Grid Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>