force-app/main/default/objects/GridWiz_Unlimit__GridDefinition__c/fields/GridWiz_Unlimit__HeaderTitle__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__HeaderTitle__c</fullName>
    <label>HeaderTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>