force-app/main/default/objects/GridWiz_Unlimit__GridDefinition__c/fields/GridWiz_Unlimit__IsColumnTotal__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__IsColumnTotal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsColumnTotal</label>
    <type>Checkbox</type>
</CustomField>