force-app/main/default/objects/GridWiz_Unlimit__GridDefinition__c/fields/GridWiz_Unlimit__IsRowTotal__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__IsRowTotal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRowTotal</label>
    <type>Checkbox</type>
</CustomField>