force-app/main/default/objects/GridWiz_Unlimit__GridDefinition__c/fields/GridWiz_Unlimit__NoOfRow__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__NoOfRow__c</fullName>
    <label>NoOfRow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>