force-app/main/default/objects/GridWiz_Unlimit__GridDefinition__c/fields/GridWiz_Unlimit__Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__Object_Prefix__c</fullName>
    <label>Object_Prefix</label>
    <length>5</length>
    <type>Text</type>
</CustomField>